# smart-pc-control

./: CMakeLists.default.cmake  CMakeLists.txt  CMakeLists.unix.cmake  Cargo.toml  CheckLists.cmake  Makefile  README.md  smart-pc-control.spec
extra/: Dockerfile
src/: main.rs
src/client/: client.rs
src/common/: client.c  client.h
src/power-control/: main.c  main.h
src/power-control/config/: smart-pc-control-power.in  smart-pc-control-power@.service.in
src/power-control/scripts/power-off/: script.sh
src/power-control/scripts/power-on/: script.sh
src/power_control/: mod.rs  power_control.rs
src/power_control/config/: smart-pc-control-power.service  smart-pc-control-power.sh
src/temperature-sensor/: main.c  main.h
src/temperature-sensor/config/: smart-pc-temperature-sensor@.service.in
src/temperature_sensor/: mod.rs  temperature_sensor.rs
src/temperature_sensor/config/: smart-pc-temperature-sensor.in
src/temperature_sensor/scripts/: script.sh.in
